[gd_scene load_steps=16 format=3 uid="uid://1rly63yl5k0j"]

[ext_resource type="Script" path="res://scenes/enemies/TrackingRangedEnemy.gd" id="1_fdwcx"]
[ext_resource type="PackedScene" uid="uid://dy7vqofh5ej8n" path="res://scenes/enemies/spike.tscn" id="2_6b8jc"]
[ext_resource type="Texture2D" uid="uid://dvha5j3j34j8a" path="res://assets_image/Characters/Enemies/dryad-Sheet.png" id="2_vm42a"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mo267"]
size = Vector2(32, 44.2857)

[sub_resource type="Animation" id="Animation_a6itw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_bemnk"]
resource_name = "alert"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_xjc00"]
resource_name = "attack"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11, 12, 13]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.8),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"attack_frame"
}]
}

[sub_resource type="Animation" id="Animation_2r7oh"]
resource_name = "death"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19, 20, 21, 22]
}

[sub_resource type="Animation" id="Animation_evimy"]
resource_name = "hurt"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27]
}

[sub_resource type="Animation" id="Animation_h6kap"]
resource_name = "idle"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [40, 41, 42, 43, 44, 45]
}

[sub_resource type="Animation" id="Animation_4olnp"]
resource_name = "run"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [32, 33, 34, 35, 36, 37, 38, 39]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_l2ty1"]
_data = {
"RESET": SubResource("Animation_a6itw"),
"alert": SubResource("Animation_bemnk"),
"attack": SubResource("Animation_xjc00"),
"death": SubResource("Animation_2r7oh"),
"hurt": SubResource("Animation_evimy"),
"idle": SubResource("Animation_h6kap"),
"run": SubResource("Animation_4olnp")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ljdqk"]
size = Vector2(80, 65.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a7b8b"]
size = Vector2(64, 58)

[sub_resource type="CircleShape2D" id="CircleShape2D_4pq4r"]
radius = 264.273

[node name="TrentEnemy" type="CharacterBody2D" groups=["Enemies"]]
scale = Vector2(0.7, 0.7)
collision_layer = 4
collision_mask = 15
script = ExtResource("1_fdwcx")
enemy_damage = 3
health = 50
health_max = 50
projectile_scene = ExtResource("2_6b8jc")
edge_priority_over_chase = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -12.1429)
shape = SubResource("RectangleShape2D_mo267")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-3, -53)
texture = ExtResource("2_vm42a")
hframes = 8
vframes = 6
frame = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_l2ty1")
}

[node name="DirectionTimer" type="Timer" parent="."]
autostart = true

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, -23.25)
shape = SubResource("RectangleShape2D_ljdqk")

[node name="DealAttackArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DealAttackArea"]
position = Vector2(0, -19)
shape = SubResource("RectangleShape2D_a7b8b")

[node name="RangeChase" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RangeChase"]
position = Vector2(0, -20)
shape = SubResource("CircleShape2D_4pq4r")

[node name="ProjectileSpawn" type="Marker2D" parent="."]
position = Vector2(-32, -24)

[node name="EdgeRayLeft" type="RayCast2D" parent="."]
position = Vector2(-16, 8)

[node name="EdgeRayRight" type="RayCast2D" parent="."]
position = Vector2(16, 8)

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="DirectionTimer" to="." method="_on_direction_timer_timeout"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="area_entered" from="DealAttackArea" to="." method="_on_deal_attack_area_area_entered"]
[connection signal="area_exited" from="DealAttackArea" to="." method="_on_deal_attack_area_area_exited"]
[connection signal="body_entered" from="RangeChase" to="." method="_on_range_chase_body_entered"]
[connection signal="body_exited" from="RangeChase" to="." method="_on_range_chase_body_exited"]
